--- a/web/assets/src/scss/Page/_blog.scss
+++ b/web/assets/src/scss/Page/_blog.scss
@@ -72,7 +72,9 @@
     .body-footer-user,
     .body-footer-date,
     .blog-footer-category,
-    .body-footer-teg {
+    .body-footer-teg,
+    .like-block,
+    .blog-footer-comment{
       vertical-align: middle;
       display: inline-block;
       padding-right: rem(25px);
