add count post in internall pages (tags and categotry)

--- a/src/MainBundle/Resources/views/Component/_post_content.html.twig
+++ b/src/MainBundle/Resources/views/Component/_post_content.html.twig
@@ -1,6 +1,6 @@
 <div class="blog-content">
   {% if posts is not empty %}
-
+    {#{{ dump() }}#}
     {% for post in posts.items %}
       <div class="blog-item blog-item-{% if post.0.postImg is empty %}not-{% endif %}img">
         {% if post.0.postImg is not empty %}
