--- a/web/assets/src/scss/Component/_comment.scss
+++ b/web/assets/src/scss/Component/_comment.scss
@@ -9,7 +9,7 @@
 
   .blog-comment-item-content {
     padding: rem(10px) 0;
-    padding-left: 85px;
+    padding-left: rem(85px);
   }
 
   .blog-comment-item-info {
@@ -21,10 +21,20 @@
       padding-left: rem(25px);
     }
 
-    .blog-cii-id{
+    .blog-cii-id {
+      text-align: center;
       position: absolute;
       top: 0;
       right: 0;
+
+      a {
+        display: block;
+        color: $grey;
+
+        &:hover {
+          color: $blue;
+        }
+      }
     }
 
     img {
@@ -33,26 +43,26 @@
     }
   }
 
-  .blog-comment-item.no-image{
+  .blog-comment-item.no-image {
 
-      .blog-cii-name,
-      .blog-cii-date {
-        padding-left: 0;
-      }
+    .blog-cii-name,
+    .blog-cii-date {
+      padding-left: 0;
+    }
 
-      .blog-cii-date {
-        padding-left: rem(25px);
-      }
+    .blog-cii-date {
+      padding-left: rem(25px);
+    }
 
     .blog-comment-item-content {
       padding-left: 0;
     }
   }
 
-  .blog-comment-count{
+  .blog-comment-count {
     border-bottom: rem(1px) solid $grey;
 
-    p{
+    p {
       text-transform: uppercase;
       padding-bottom: rem(10px);
     }
@@ -62,7 +72,7 @@
 // Comment form.
 .blog-item-comment-form {
 
-  p{
+  p {
     color: $grey;
   }
 
