--- a/web/assets/src/scss/Component/_comment.scss
+++ b/web/assets/src/scss/Component/_comment.scss
@@ -80,7 +80,7 @@
     margin-bottom: rem(25px);
 
     textarea {
-      border: rem(1px) solid $black-light;
+      border: rem(1px) solid $grey;
       padding: rem(10px);
       min-height: rem(150px);
     }
