--- a/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
+++ b/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
@@ -78,12 +78,14 @@
                   </div>
                   <div class="blog-cii-id">
                     #{{ comment.id }}
-                    <a href="{{ path('blog_comment_edit', { 'id': post.id, 'shortTitle': post.shortTitle, 'commentId':comment.id }) }}">
-                      <i class="fa fa-pencil" aria-hidden="true"></i>
-                    </a>
-                    <a href="{{ path('blog_comment_delete', { 'id': post.id, 'shortTitle': post.shortTitle, 'commentId':comment.id }) }}">
-                      <i class="fa fa-trash" aria-hidden="true"></i>
-                    </a>
+                    {#{% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_MODERATOR') %}#}
+                      <a href="{{ path('blog_comment_edit', { 'id': post.id, 'shortTitle': post.shortTitle, 'commentId':comment.id }) }}">
+                        <i class="fa fa-pencil" aria-hidden="true"></i>
+                      </a>
+                      <a href="{{ path('blog_comment_delete', { 'id': post.id, 'shortTitle': post.shortTitle, 'commentId':comment.id }) }}">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                      </a>
+                    {#{% endif %}#}
                   </div>
                 </div>
                 <div class="blog-comment-item-content">
