--- a/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
+++ b/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
@@ -16,7 +16,7 @@
         </a>
       </div>
       <div class="body-descriptions">
-        <p>{{ post.longDescriptions }}</p>
+        <p>{{ post.longDescriptions|raw }}</p>
       </div>
       <div class="body-footer">
         <div class="body-footer-user">
