--- a/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
+++ b/src/MainBundle/Resources/views/Page/_internal_blog.html.twig
@@ -61,7 +61,7 @@
                         </div>
                     {% endif %}
                     {% for comment in show_comment %}
-                        <div class="blog-comment-item {% if comment.user.img is empty %}no-image{% endif %}">
+                        <div class="blog-comment-item {% if comment.user.img is empty %}no-image{% endif %} {% if comment.parent is not null %}comment-child{% endif %}">
                             <div class="blog-comment-item-info">
                                 {% if comment.user.img is not empty %}
                                     <img src="/user_images/{{ comment.user.img }}" alt="{{ comment.user.username }}">
@@ -91,12 +91,14 @@
                             </div>
                             <div class="blog-comment-item-content">
                                 <p>{{ comment.commentText }}</p>
-                            </div>
-                            <div class="blog-comment-item-addComment">
+
                                 {% if comment.parent is null %}
-                                    <a href="{{ path('blog_comment_add_child', { 'id': post.id, 'shortTitle': post.shortTitle, 'commentId':comment.id }) }}">
-                                        add comment child
-                                    </a>
+                                    <div class="blog-cic-add">
+                                        <a href="{{ path('blog_comment_add_child', { 'id': post.id, 'shortTitle': post.shortTitle, 'commentId':comment.id }) }}">
+                                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                                            add comment
+                                        </a>
+                                    </div>
                                 {% endif %}
                             </div>
                         </div>
