--- a/web/assets/src/scss/Page/_blog.scss
+++ b/web/assets/src/scss/Page/_blog.scss
@@ -23,8 +23,14 @@
 
     .blog-img {
 
+	  a{
+		text-align: center;
+		display: block;
+	  }
+
       img {
-        width: 100%;
+		width: 100%;
+		max-height: rem(400px);
       }
     }
 
